--- a/style.css
+++ b/style.css
@@ -307,3 +307,60 @@ main {
     justify-content: space-between;            /*!important:  only this line has been added for card two. */
     margin-bottom: 25px;
 }
+
+/* Section 03 style end here  */
+
+
+/* Section 04 style start here  */
+.donate{
+    margin-top: 70px;
+    text-align: center;
+}
+.donate-title{
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.donate-description{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #0e0e0ebe;
+    margin-bottom: 25px;
+}
+.donate-cards{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 30px;
+}
+.donate-card{
+    font-size: 40px;
+    font-weight: 800;
+    padding: 40px 50px;
+    width: 300px;
+    border-radius: 15px;
+    border: 1px solid #0e0e0e33;
+    color: #0e0e0ed2;
+    background-color: var(--primaryColor);
+}
+.donate input{
+    width: 80%;
+    padding: 20px 10px;
+    font-size: 20px;
+    font-weight: 500;
+    color: #0e0e0e60;
+    background-color: var(--primaryColor);
+    border: none;
+}
+.donate-btn{
+    background-color:var(--thirdColor);
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--primaryColor);
+    padding: 17px 34px;
+    border: none;
+    border-radius: 8px;
+    margin: 20px 0px;
+}
