--- a/style.css
+++ b/style.css
@@ -364,3 +364,89 @@ main {
     border-radius: 8px;
     margin: 20px 0px;
 }
+
+/* section 04 style end here  */
+
+
+/* section 05 style start here  */
+.subscribe-section{
+    background-color: var(--secColor);
+    padding: 80px 0px;
+    margin: 80px 0px;
+    border-radius: 20px;
+}
+.subscribe{
+    width: 750px;
+    height: 240px;
+    margin: 0 auto;
+    text-align: center;
+}
+.subscribe-title{
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 19px;
+}
+.subscribe-description{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #0e0e0ebd;
+    margin-bottom: 20px;
+}
+.sent-section{
+
+    position:relative;
+}
+.sent-mail{
+    font-size: 16px;
+    font-weight: 600;
+    color: #0e0e0e52;
+    padding: 18px 0px 20px 40px;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+}
+
+.subscribe-btn{
+    padding: 17px 34px;
+    position: absolute;
+    right: 0;
+    top: 0px;
+    border: none;
+    border-radius: 0px 5px 5px 0px;
+    color: var(--primaryColor);
+    font-size: 18px;
+    font-weight: 600;
+    background-color: var(--thirdColor);
+}
+.promiss{
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #0e0e0eb6;
+}
+/* Main section style end here  */
+
+
+/* Footer style start here  */
+footer{
+    background-color: var(--primaryColor);
+}
+.footer-container{
+    width: 80%;
+    padding: 50px 0px;
+    margin: 0 auto;
+    text-align: center;
+}
+.footer-title{
+    font-size: 32px;
+    font-weight: 700;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #0e0e0e18;
+}
+.footer-icon{
+    margin-top: 32px;
+}
+.footer-icon img{
+    margin-right: 25px;
+}
