--- a/style.css
+++ b/style.css
@@ -17,6 +17,19 @@ body{
     color: #0E0E0E;
 }
 
+
+
+/* Shared style(Hover-effect)  */
+.btn:hover{
+    background-color:#5dbea3;
+    cursor: pointer;
+    color: var(--primaryColor);
+}
+.shadow:hover{
+    box-shadow: 1px 1px 20px black;
+}
+
+
 /* Header style start here  */
 .nav-container{
     width: 80%;
@@ -36,6 +49,7 @@ body{
     border: 1px solid var(--thirdColor);
     padding: 15px 30px;
     border-radius: 5px;
+    transition: 0.5s;
 }
 
 
@@ -51,6 +65,7 @@ body{
     justify-content: space-around;
     align-items: center;
     margin-bottom: 80px;
+    transition: 0.4s;
 }
 .hero-sub-title{
     font-size: 24px;
@@ -71,6 +86,7 @@ body{
     padding: 18px 34px;
     border: none;
     border-radius: 8px;
+    transition: 0.5s;
 }
 /* Hero area style end here */
 
@@ -95,6 +111,7 @@ main {
     background-color: var(--primaryColor);
     padding: 24px;
     border-radius: 10px;
+    transition: 0.4s;
 }
 .pillars-cards img {
     padding-bottom: 20px;
@@ -137,6 +154,7 @@ main {
     padding: 30px;
     border-radius: 10px;
     width: 32%;
+    transition: 0.4s;
 }
 .digital-card img {
     padding-bottom: 20px;
@@ -156,12 +174,14 @@ main {
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
+    transition: 0.5s;
 }
 .green-card{
     background-color:#C6E4D6;
     padding: 30px;
     border-radius: 10px;
     width: 32%;
+    transition: 0.4s;
 }
 .green-card img {
     padding-bottom: 20px;
@@ -181,12 +201,14 @@ main {
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
+    transition: 0.5s;
 }
 .modern-card{
     background-color: #F7EBCF;
     padding: 30px;
     border-radius: 10px;
     width: 32%;
+    transition: 0.4s;
 }
 .modern-card img {
     padding-bottom: 20px;
@@ -206,6 +228,7 @@ main {
     padding: 10px 20px;
     border: none;
     border-radius: 8px;
+    transition: 0.5s;
 }
 
 .quatation{
@@ -217,6 +240,7 @@ main {
     background-repeat: no-repeat;
     background-position-x: 24px;
     background-position-y: 25px;
+    transition: 0.4s;
 }
 .quatation q{
     font-size: 16px;
@@ -263,6 +287,7 @@ main {
     border-radius: 15px;
     display: flex;
     margin-bottom: 25px;
+    transition: 0.4s;
 }
 .news-img{
     border-radius: 15px;
@@ -297,6 +322,7 @@ main {
     border: none;
     border-radius: 8px;
     margin-top: 20px;
+    transition: 0.5s;
 }
 
 .news-card-two{
@@ -306,6 +332,7 @@ main {
     display: flex;
     justify-content: space-between;            /*!important:  only this line has been added for card two. */
     margin-bottom: 25px;
+    transition: 0.4s;
 }
 
 /* Section 03 style end here  */
@@ -344,8 +371,10 @@ main {
     border: 1px solid #0e0e0e33;
     color: #0e0e0ed2;
     background-color: var(--primaryColor);
+    transition: 0.5s;
 }
 .donate input{
+    text-align: center;
     width: 80%;
     padding: 20px 10px;
     font-size: 20px;
@@ -363,6 +392,10 @@ main {
     border: none;
     border-radius: 8px;
     margin: 20px 0px;
+    transition: 0.5s;
+}
+.color{
+    background-color: var(--secColor);
 }
 
 /* section 04 style end here  */
@@ -374,6 +407,7 @@ main {
     padding: 80px 0px;
     margin: 80px 0px;
     border-radius: 20px;
+    transition: 0.4s;
 }
 .subscribe{
     width: 750px;
@@ -401,7 +435,7 @@ main {
     font-size: 16px;
     font-weight: 600;
     color: #0e0e0e52;
-    padding: 18px 0px 20px 40px;
+    padding: 20px 0px 17px 40px;
     width: 100%;
     border: none;
     border-radius: 5px;
@@ -418,6 +452,7 @@ main {
     font-size: 18px;
     font-weight: 600;
     background-color: var(--thirdColor);
+    transition: 0.5s;
 }
 .promiss{
     margin-top: 30px;
